hphp/test/zend/good/ext/standard/tests/misc/time_nanosleep_error1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('time_nanosleep')) die("skip");
}
