hphp/test/zend/bad/ext/pgsql/tests/23sync_query_params.php.skipif
<?php 
include("skipif.inc"); 
if (!function_exists('pg_query_params')) die('skip function pg_query_params() does not exist');
?>